--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,38 +12,41 @@
   <body>
 
     <header>
+        <nav class="navbar navbar-light bg-secondary justify-content-end">
               <% if user_signed_in? %>
-            <ul>
-              <li>
-               <%= link_to "スタイル一覧", about_path %>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+               <%= link_to "スタイル一覧", about_path, class: "nav-link" %>
               </li>
-              <li>
+              <li  class="nav-item">
                <%= link_to "クローゼット", about_path %>
               </li>
 
-              <li>
+              <li  class="nav-item">
                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
               </li>
             </ul>
 
             <% else %>
-             <ul>
-              <li>
+             <ul class="navbar-nav">
+              <li  class="nav-item">
                 <%= link_to "About", about_path %>
               </li>
 
-               <li>
+               <li  class="nav-item">
                  <%= link_to "Sign up", new_user_registration_path %>
                </li>
-               <li>
+               <li  class="nav-item">
                  <%= link_to "Log in", new_user_session_path %>
                </li>
              </ul>
             <% end %>
+        </nav>
     </header>
 
     <%= yield %>
     <footer>
+        <p class="text-center bg-secondary text-light">Footer</p>
     </footer>
   </body>
 </html>
