--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,15 @@
-<h3>会員情報編集ページ</h3>
+<h3>User情報編集</h3>
+
+<%= form_with model:@user, url:"/user/#{@user.id}", local:true do |f| %>
+
+<h4>名前</h4>
+<%= f.text_field :name %>
+
+
+<h4>メールアドレス</h4>
+<%= f.text_field :email %>
+
+<%= f.submit '変更を保存' %>
+
+
+<% end %>
