--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
               <% if user_signed_in? %>
             <ul class="navbar-nav">
               <li class="nav-item">
-               <%= link_to "スタイル一覧", about_path, class: "nav-link" %>
+               <%= link_to "スタイル一覧", styles_path %>
               </li>
               <li  class="nav-item">
-               <%= link_to "クローゼット", about_path %>
+               <%= link_to "クローゼット", items_path %>
               </li>
 
               <li  class="nav-item">
