--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -10,6 +10,22 @@
 
 <%= @style.detail %>
 
+  <%if @style.favorited_by?(current_user) %>
+  <p>
+    <%= link_to style_favorites_path(@style), method: :delete do %>
+    ♥<%= @style.favorites.count %>いいね
+    <%  end %>
+  </p>
+  <% else %>
+   <p>
+    <%= link_to style_favorites_path(@style), method: :post do %>
+    ♡<%= @style.favorites.count %>いいね
+    <%  end %>
+  </p>
+  <% end %>
+
+
+
 
 <div class="comments">
   <p>コメント件数:<%= @style.comments.count %></p>
@@ -24,15 +40,20 @@
   </div>
   <% end %>
 
-  <% end %>
+   <% end %>
 </div>
+
+
+
+
+
+
 
 <div class="new-comment">
  <%= form_with(model: [@style,@comment], local: true) do |f| %>
    <%= f.text_area :body, rows:'5', placeholder: "コメントをここに" %>
    <%= f.submit "送信する" %>
   <% end %>
-
 </div>
 
 
