--- a/app/views/styles/edit.html.erb
+++ b/app/views/styles/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>Style編集</h3>
+<h3 class="heading">Style編集</h3>
 
 <%= form_with model:@style, url:"/styles/#{@style.id}", local:true do |f| %>
 
