--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,12 @@
-<h3 class="heading">アイテム一覧</h3>
+<h3 class="heading">Closet</h3>
+<div class="btn">
+        <%= link_to 'アイテム追加', new_item_path, class: "btn btn-outline-secondary" %>
+</div>
+
+<div class="btn">
+        <%= link_to 'ユーザー情報', user_path(current_user.id), class: "btn btn-outline-secondary" %>
+</div>
+
 <% @my_items.each do |item| %>
 
 
