--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
     <div class="col-md-2"></div>
 
     <div class="col-md-8">
+    <% if @user == current_user  %>
       <h1>マイページ</h1>
       <h2 style="display:inline-block">登録情報</h2>
       <div class="btn">
@@ -17,12 +18,32 @@
          <th>名前</th><td><%=@user.name %></td>
         </tr>
 
-
+        <tr>
+         <th>自己紹介</th><td><%= @user.introduction %></td>
+        </tr>
 
         <tr>
          <th>メールアドレス</th><td><%= @user.email %></td>
         </tr>
        </table>
+
+
+       <% else %>
+
+        <h1>ユーザー情報</h1>
+      <h2 style="display:inline-block">登録情報</h2>
+
+      <table class="table table-striped">
+        <tr>
+         <th>名前</th><td><%=@user.name %></td>
+        </tr>
+        <tr>
+         <th>自己紹介</th><td><%= @user.introduction %></td>
+        </tr>
+       </table>
+
+    <%= render 'follow', user: @user %>
+       <% end %>
 
 
       </div>
