--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -2,7 +2,7 @@
 <% @styles.each do |style| %>
 
 
-<%= attachment_image_tag style, :image, :fill, 100, 100, format: 'jpeg' %>
+<%= attachment_image_tag style, :image, format: 'png', size:"300x300" %>
 
 
 <p>アイテム名</p>
