--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,28 @@
 <h3 class="leftcolor-blue heading">トップページ</h3>
+
+
+<div class="carousel slide" id="sample" date-ride="carousel">
+  <ol class="carousel-indicators">
+    <li date-target="#sample" date-slide-to="0" class="active"></li>
+    <li date-target="#sample" date-slide-to="1"></li>
+    <li date-target="#sample" date-slide-to="2"></li>
+    <li date-target="#sample" date-slide-to="3"></li>
+  </ol>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active"><img src="/assets/fo043.png"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/ot130.png"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/dr068.png"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/go041.png"  class="d-block w-25"></div>
+  </div>
+
+ <a href="#sample" class="carousel-control-prev" date-slide="prev">
+   <span class="carousel-controll-prev-icon"></span>
+   <span class="sr-only">前の画像へ</span>
+ </a>
+  <a href="#sample" class="carousel-control-next" date-slide="next">
+   <span class="carousel-controll-next-icon"></span>
+   <span class="sr-only">次の画像へ</span>
+ </a>
+
+</div>
