--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,7 @@
 <h3 class="heading">アイテム詳細</h3>
 
 
-<%= attachment_image_tag @item, :image, format: 'jpeg', size:"300x300" %>
+<%= attachment_image_tag @item, :image, format: 'png', size: "300x300" %>
 
 
 <%= @item.name %>
