--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,17 @@
 <h3 class="heading">User情報編集</h3>
 
-<%= form_with model:@user, url:"/user/#{@user.id}", local:true do |f| %>
+<%= form_with model:@user, url:"/users/#{@user.id}", local:true do |f| %>
+
+
+<%= attachment_image_tag @user, :image, :fill,60,60 %>
+<label for="inputImage">ProfileImage</label>
+<%= f.attachment_field :image, placeholder: "プロフィール画像" %>
 
 <h4>名前</h4>
 <%= f.text_field :name %>
+
+<h4>自己紹介文</h4>
+<%= f.text_area :introduction %>
 
 
 <h4>メールアドレス</h4>
