--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,9 @@
         <%= link_to '編集する', edit_user_path(@user.id),class: "btn  btn-outline-secondary" %>
       </div>
 
+       <%= attachment_image_tag @user, :image, format: 'png', size:"300x300" %>
+
+
       <table class="table table-striped">
         <tr>
          <th>名前</th><td><%=@user.name %></td>
@@ -32,6 +35,8 @@
 
         <h1>ユーザー情報</h1>
       <h2 style="display:inline-block">登録情報</h2>
+
+      <%= attachment_image_tag @user, :image, format: 'jpeg', size:"300x300" %>
 
       <table class="table table-striped">
         <tr>
