--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,20 +1,38 @@
 <h3 class="heading">Item追加</h3>
 
+<div class="container">
+<div class="row">
+
+<div class="col-md-1"></div>
+
+
+<div class="col-md-10">
 <%= form_with model:@item, url:'/items', local:true do |f| %>
 
 <h4>画像</h4>
 <%= f.attachment_field :image %>
 
 
+<table class="table table-striped">
+<tr>
+<th>名前</th>
+<td><%= f.text_field :name %></td>
+</tr>
 
-<h4>名前</h4>
-<%= f.text_field :name %>
-
-
-<h4>詳細</h4>
-<%= f.text_area :detail %>
+<tr>
+<th>詳細</th>
+<td><%= f.text_area :detail %></td>
+</tr>
+</table>
 
 <%= f.submit '保存' %>
 
 
 <% end %>
+
+</div>
+
+<div class="col-md-1"></div>
+
+</div>
+</div>
