--- a/app/views/styles/edit.html.erb
+++ b/app/views/styles/edit.html.erb
@@ -1,15 +1,41 @@
 <h3 class="heading">Style編集</h3>
 
+<div class="container">
+<div class="row">
+
+<div class="col-md-1"></div>
+
+<div class="col-md-10">
+
 <%= form_with model:@style, url:"/styles/#{@style.id}", local:true do |f| %>
 
-<h4>名前</h4>
-<%= f.text_field :name %>
+<%= attachment_image_tag @style, :image, :fill,60,60 %>
+<label for="inputImage">StyleImage</label>
+<%= f.attachment_field :image, placeholder: "スタイル画像" %>
 
 
-<h4>詳細</h4>
-<%= f.text_area :detail %>
+<table class="table table-striped">
+    <tr>
+<th>名前</th>
+<td><%= f.text_field :name %></td>
+</tr>
 
+<tr>
+<th>詳細</th>
+<td><%= f.text_area :detail %></td>
+</tr>
+
+
+</table>
 <%= f.submit '変更を保存' %>
 
 
 <% end %>
+
+</div>
+
+<div class="col-md-1"></div>
+
+
+</div>
+</div>
