--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,21 +7,31 @@
         <%= link_to 'ユーザー情報', user_path(current_user.id), class: "btn btn-outline-secondary" %>
 </div>
 
+<div class="container">
+<div class="row">
 
- <div class="d-flex flex-wrap justify-content-center">
+<div class="col-md-1"></div>
+
+ <div class="d-flex flex-wrap justify-content-around col-md-10">
 <% @my_items.each do |item| %>
 
 
-<%= attachment_image_tag item, :image, :fill, 200, 200, format: 'png' %>
-
 <div>
+<%= link_to item_path(item) do %>
+<%= attachment_image_tag item, :image, format: 'jpeg', size:"150x150" %>
+<% end %>
 
 <%= link_to item_path(item) do %>
-<%= item.name %>
+<p><%= item.name %></p>
 <% end %>
-<%= item.detail %>
+<p><%= item.detail %></p>
 </div>
 
 <% end %>
+</div>
 
+<div class="col-md-1"></div>
+
+
+</div>
 </div>
