--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,1 +1,31 @@
 <h1>フォロワー一覧</h1>
+
+<table class='table table-hover table-inverse'>
+<thead>
+    <tr>
+      <th>images</th>
+      <th>name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      </tr>
+  </thead>
+
+  <tbody>
+<% @users.each do |user| %>
+<tr>
+  <hr>
+  <td><%= link_to user_path(user) do %>
+          <%= attachment_image_tag user, :image, :fill, 50, 50, fallback: "no-image-icon.jpg" %>
+          <% end %>
+        </td>
+        <td><%=  user.name %></td>
+  <td>フォロー数： </td>
+   <td>フォロワー数： </td>
+    <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+
+
+    </tr>
+<% end %>
+  </tbody>
+</table>
