--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
 <h3 class="heading">User情報編集</h3>
 
+<div class="container">
+<div class="row">
+
+<div class="col-md-1"></div>
+
+<div class="col-md-10">
 <%= form_with model:@user, url:"/users/#{@user.id}", local:true do |f| %>
 
 
@@ -7,17 +13,33 @@
 <label for="inputImage">ProfileImage</label>
 <%= f.attachment_field :image, placeholder: "プロフィール画像" %>
 
-<h4>名前</h4>
-<%= f.text_field :name %>
 
-<h4>自己紹介文</h4>
-<%= f.text_area :introduction %>
+<table class="table table-striped">
+    <tr>
+<th>名前</th>
+<td><%= f.text_field :name %></td>
+    </tr>
 
+<tr>
+<th>自己紹介文</th>
+<td><%= f.text_area :introduction %><td>
+</tr>
 
-<h4>メールアドレス</h4>
-<%= f.text_field :email %>
+<tr>
+<th>メールアドレス</th>
+<td><%= f.text_field :email %></td>
+</tr>
+
+</table>
 
 <%= f.submit '変更を保存' %>
 
 
 <% end %>
+</div>
+
+<div class="col-md-1"></div>
+
+
+</div>
+</div>
