--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,17 +5,14 @@
 
     <div class="col-md-2"></div>
 
-    <div class="col-md-8">
+
     <% if @user == current_user  %>
-      <h1>マイページ</h1>
-      <h2 style="display:inline-block">登録情報</h2>
-      <div class="btn">
-        <%= link_to '編集する', edit_user_path(@user.id),class: "btn  btn-outline-secondary" %>
-      </div>
 
-       <%= attachment_image_tag @user, :image, format: 'png', size:"300x300" %>
+    <div class="col-md-4">
+      <%= attachment_image_tag @user, :image, format: 'png', size:"300x300" %>
+ </div>
 
-
+ <div class="col-md-4 mt-5">
       <table class="table table-striped">
         <tr>
          <th>名前</th><td><%=@user.name %></td>
@@ -30,14 +27,20 @@
         </tr>
        </table>
 
-
+ <div class="btn">
+        <%= link_to '編集する', edit_user_path(@user.id),class: "btn  btn-outline-secondary" %>
+      </div>
+</div>
        <% else %>
 
-        <h1>ユーザー情報</h1>
-      <h2 style="display:inline-block">登録情報</h2>
+    <div class="col-md-4">
+
 
       <%= attachment_image_tag @user, :image, format: 'jpeg', size:"300x300" %>
 
+</div>
+
+ <div class="col-md-4 mt-5">
       <table class="table table-striped">
         <tr>
          <th>名前</th><td><%=@user.name %></td>
@@ -47,11 +50,15 @@
         </tr>
        </table>
 
+
     <%= render 'follow', user: @user %>
+</div>
+
        <% end %>
 
 
-      </div>
+
+
     <div class="col-md-2"></div>
 
   </div>
