--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,10 +10,10 @@
   </ol>
 
   <div class="carousel-inner">
-    <div class="carousel-item active"><img src="/assets/fo043.png"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/ot130.png"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/dr068.png"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/go041.png"  class="d-block w-25"></div>
+    <div class="carousel-item active"><img src="/assets/マカロン.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/ティラミス.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/モンブラン.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/ダウンロード.jpeg"  class="d-block w-25"></div>
   </div>
 
  <a href="#sample" class="carousel-control-prev" date-slide="prev">
