--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,6 +4,10 @@
 </div>
 
 <div class="btn">
+        <%= link_to 'スタイル追加', new_style_path, class: "btn btn-outline-secondary" %>
+</div>
+
+<div class="btn">
         <%= link_to 'ユーザー情報', user_path(current_user.id), class: "btn btn-outline-secondary" %>
 </div>
 
@@ -12,13 +16,13 @@
 
 <div class="col-md-1"></div>
 
- <div class="d-flex flex-wrap justify-content-around col-md-10">
+ <div class="d-flex flex-wrap justify-content-between col-md-10">
 <% @my_items.each do |item| %>
 
 
 <div>
 <%= link_to item_path(item) do %>
-<%= attachment_image_tag item, :image, format: 'jpeg', size:"150x150" %>
+<%= attachment_image_tag item, :image, format: 'jpeg', size:"200x200" %>
 <% end %>
 
 <%= link_to item_path(item) do %>
