--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -5,29 +5,17 @@
 
 <div class="col-md-1"></div>
 
- <div class="d-flex flex-wrap justify-content-around col-md-10">
+ <div class="d-flex flex-wrap justify-content-between col-md-10">
 <% @all_ranks.each do |style| %>
 
 
 <div>
 <%= link_to style_path(style) do %>
-<%= attachment_image_tag style, :image, format: 'jpeg', size:"150x150" %>
+<%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
 <% end %>
 <p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
 
- <%if style.favorited_by?(current_user) %>
-  <p>
-    <%= link_to style_favorites_path(style), method: :delete do %>
-    ♥<%= style.favorites.count %>いいね
-    <%  end %>
-  </p>
-  <% else %>
-   <p>
-    <%= link_to style_favorites_path(style), method: :post do %>
-    ♡<%= style.favorites.count %>いいね
-    <%  end %>
-  </p>
-  <% end %>
+<div class="favorite-btn"> <%= render 'favorite', style: @style %></div>
  </div>
 
 <% end %>
