--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,7 +26,7 @@
 <% end %>
 
 <%= link_to item_path(item) do %>
-<p><%= item.name %></p>
+<p class="text-center"><%= item.name %></p>
 <% end %>
 <p><%= item.detail %></p>
 </div>
