--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,28 +1,22 @@
 <h3 class="heading">Styles</h3>
 
 <div class="container">
-<div class="row">
+  <div class="row">
+    <div class="col-md-1"></div>
 
-<div class="col-md-1"></div>
+    <div class="d-flex flex-wrap justify-content-between col-md-10">
+      <% @all_ranks.each do |style| %>
 
- <div class="d-flex flex-wrap justify-content-between col-md-10">
-<% @all_ranks.each do |style| %>
+     <div>
+       <%= link_to style_path(style) do %>
+         <%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+       <% end %>
+       <p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
+       <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
+     </div>
+       <% end %>
+    </div>
 
-
-<div>
-<%= link_to style_path(style) do %>
-<%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
-<% end %>
-<p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
-
-<div class="favorite-btn"> <%= render 'favorite', style: @style %></div>
- </div>
-
-<% end %>
-</div>
-
-<div class="col-md-1"></div>
-
-
-</div>
+    <div class="col-md-1"></div>
+  </div>
 </div>
