--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,13 @@
 
     <div class="col-md-2"></div>
 
-
     <% if @user == current_user  %>
 
     <div class="col-md-4">
       <%= attachment_image_tag @user, :image, format: 'png', size:"300x300" %>
- </div>
+    </div>
 
- <div class="col-md-4 mt-5">
+    <div class="col-md-4 mt-5">
       <table class="table table-striped">
         <tr>
          <th>名前</th><td><%=@user.name %></td>
@@ -25,22 +24,30 @@
         <tr>
          <th>メールアドレス</th><td><%= @user.email %></td>
         </tr>
+
+            <tr>
+	   <th>follows</th><td><%= link_to user_followings_path(@user) do %><%= @user.followings.count %><% end %></td>
+      </tr>
+
+      <tr>
+	   <th>followers</th><td><%= link_to user_followers_path(@user) do %><%= @user.followers.count %><% end %></td>
+      </tr>
+
+
        </table>
 
- <div class="btn">
+       <div class="btn">
         <%= link_to '編集する', edit_user_path(@user.id),class: "btn  btn-outline-secondary" %>
-      </div>
-</div>
-       <% else %>
+       </div>
+    </div>
+
+   <% else %>
 
     <div class="col-md-4">
-
-
       <%= attachment_image_tag @user, :image, format: 'jpeg', size:"300x300" %>
+    </div>
 
-</div>
-
- <div class="col-md-4 mt-5">
+    <div class="col-md-4 mt-5">
       <table class="table table-striped">
         <tr>
          <th>名前</th><td><%=@user.name %></td>
@@ -48,16 +55,33 @@
         <tr>
          <th>自己紹介</th><td><%= @user.introduction %></td>
         </tr>
-       </table>
 
+      <tr>
+	   <th>follows</th><td><%= link_to user_followings_path(@user) do %><%= @user.followings.count %><% end %></td>
+      </tr>
 
-    <%= render 'follow', user: @user %>
+      <tr>
+	   <th>followers</th><td><%= link_to user_followers_path(@user) do %><%= @user.followers.count %><% end %></td>
+      </tr>
+
+      </table>
+
+       <%= render partial: 'follow', locals: {user: @user} %>
+    </div>
+
+     <% end %>
+
+<div class="d-flex flex-wrap justify-content-between">
+<% @styles.each do |style| %>
+
+<div>
+<%= link_to style_path(style) do %>
+<%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+<% end %>
 </div>
 
-       <% end %>
-
-
-
+<% end %>
+</div>
 
     <div class="col-md-2"></div>
 
