--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,10 +10,12 @@
   </ol>
 
   <div class="carousel-inner">
-    <div class="carousel-item active"><img src="/assets/マカロン.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/ティラミス.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/モンブラン.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/ダウンロード.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item active"><img src="/assets/22026459_s.jpeg"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/4771511_s.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/4906649_s.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/4906963_s.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/5085364_s.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item"><img src="/assets/506926_s.jpeg"  class="d-block w-25"></div>
   </div>
 
  <a href="#sample" class="carousel-control-prev" date-slide="prev">
