--- a/app/views/users/alert.html.erb
+++ b/app/views/users/alert.html.erb
@@ -1,4 +1,4 @@
-<div class="alert">
+<div class="alert text-center">
 
   <h1>本当に退会しますか？</h1>
   <p>退会すると、会員登録情報や<br>これまでの購入履歴が閲覧できなくなります。<br>退会する場合は、「退会する」をクリックしてください。</p>
@@ -8,7 +8,7 @@
   </div>
 
   <div class="btn">
-   <%= link_to '退会する', root_path, method: :patch, class: "btn btn-danger" %>
+   <%= link_to '退会する', withdraw_path, method: :patch, class: "btn btn-danger" %>
   </div>
 
 
