--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#style_<%= @style.id %>.favorite-btn").html("<%= j(render 'styles/favorite-btn', style: @style) %>");
+$("#style_<%= @style.id %>.favorite-btn").html("<%= j(render 'favorites/favorite-btn', locals: {style: @style}) %>");
