--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.about-image{
+  width: 100%;
+  background-image: url("/images/4771511_s.jpg");
+height: 400px;
+background-size: contain;
+
+}
