--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,9 @@
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-1"></div>
+
+<div class="col-md-10">
 <h3 class="leftcolor-blue heading">トップページ</h3>
 
 
@@ -10,21 +16,28 @@
   </ol>
 
   <div class="carousel-inner">
-    <div class="carousel-item active"><img src="/assets/22026459_s.jpeg"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/4771511_s.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/4906649_s.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/4906963_s.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/5085364_s.jpeg"  class="d-block w-25"></div>
-    <div class="carousel-item"><img src="/assets/506926_s.jpeg"  class="d-block w-25"></div>
+    <div class="carousel-item active"><img src="/assets/4771511_s.jpg"  class="d-block w-50"></div>
+    <div class="carousel-item"><img src="/assets/22026459_s.jpg" alt="second slide"  class="d-block w-50"></div>
+    <div class="carousel-item"><img src="/assets/4906649_s.jpg"  class="d-block w-50"></div>
+    <div class="carousel-item"><img src="/assets/4906963_s.jpg"  class="d-block w-50"></div>
+    <div class="carousel-item"><img src="/assets/5085364_s.jpg"  class="d-block w-50"></div>
+    <div class="carousel-item"><img src="/assets/5043422_s.jpg"  class="d-block w-50"></div>
   </div>
 
- <a href="#sample" class="carousel-control-prev" date-slide="prev">
-   <span class="carousel-controll-prev-icon"></span>
+ <a href="#sample" class="carousel-control-prev" role="buttton" date-slide="prev">
+   <span class="carousel-controll-prev-icon" aria-hidden="true"></span>
    <span class="sr-only">前の画像へ</span>
  </a>
-  <a href="#sample" class="carousel-control-next" date-slide="next">
-   <span class="carousel-controll-next-icon"></span>
+  <a href="#sample" class="carousel-control-next" role="button" date-slide="next">
+   <span class="carousel-controll-next-icon" aria-hidden="true"></span>
    <span class="sr-only">次の画像へ</span>
  </a>
 
+</div>
+
+
+</div>
+
+<div class="col-md-1"></div>
+</div>
 </div>
