--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,4 +1,11 @@
-<h1>フォロー一覧</h1>
+<div class="container">
+<div class="row">
+
+<div class="col-md-1"></div>
+
+<div class="col-md-10">
+
+<h3 class="heading">フォロー中</h3>
 
 <table class='table table-hover table-inverse'>
 <thead>
@@ -7,25 +14,31 @@
       <th>name</th>
       <th></th>
       <th></th>
-      <th></th>
-      </tr>
+           </tr>
   </thead>
 
   <tbody>
 <% @users.each do |user| %>
 <tr>
-  <hr>
+
   <td><%= link_to user_path(user) do %>
           <%= attachment_image_tag user, :image, :fill, 50, 50, fallback: "no-image-icon.jpg" %>
           <% end %>
         </td>
-        <td><%=  user.name %></td>
+       <td><%= link_to user_path(user) do %><%=  user.name %><% end %></td>
   <td>フォロー数： </td>
    <td>フォロワー数： </td>
-    <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+
 
 
     </tr>
 <% end %>
   </tbody>
 </table>
+
+</div>
+<div class="col-md-1"></div>
+
+
+</div>
+</div>
