--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h3 class="heading">User情報編集</h3>
+<h3 class="heading">User Info</h3>
 
 <div class="container">
 <div class="row">
@@ -33,6 +33,8 @@
 </table>
 
 <%= f.submit '変更を保存' %>
+
+<div class="btn"><%= link_to '退会する', alert_path, class: "btn btn-outline-secondary" %></div>
 
 
 <% end %>
