--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@ footer {
   border-top: solid white;
   bottom: 0;
   font-weight: bold;
-  color: darkviolet;
+  color: white;
+  background-color: steelblue;
 }
 
