--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -28,7 +28,7 @@
 <%= link_to item_path(item) do %>
 <p class="text-center"><%= item.name %></p>
 <% end %>
-<p><%= item.detail %></p>
+<p class="text-center"><%= item.detail %></p>
 </div>
 
 <% end %>
