フッターの固定

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -5,7 +5,7 @@
 
 .about-image{
   width: 100%;
-  background-image: url("/images/4771511_s.jpg");
+  background-image: image-url("/images/4771511_s.jpg");
 height: 400px;
 background-size: contain;
 
