--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,14 @@ header {
   border-bottom: solid white;
   background-color: steelblue;
   height: 70px;
+  color: white;
+}
+
+.logo {
+  color: white;
+   font-size: 40px;
+
+
 }
 
 .leftcolor-blue {
@@ -45,6 +53,15 @@ header {
   font-size: 20px;
   font-weight: bold;
   color: white;
+}
+
+.side-item {
+  color: black;
+   font-size: 20px;
+}
+
+.sidebar {
+  font-size: 14px;
 }
 
 .heading {
