--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$("#style_<%= @style.id %>.favorite-btn").html("<%= j(render 'favorites/favorite-btn', locals: {style: @style}) %>");
+$("#style_<%= @style.id %>.favorite-btn").html("<%= j(render partial: 'favorites/favorite-btn', locals: {style: @style}) %>");
