レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,13 +41,13 @@ header {
 
 }
 
-.leftcolor-blue {
-  padding-left: 10px;
-  border-left-width: 5px;
-  border-left-style: solid;
-  border-left-color: #6495ED;
+.logo:hover {
+  color: white;
+  text-decoration: none;
 
 }
+
+
 
 .menu {
   font-size: 20px;
