--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -2,14 +2,14 @@
 <h3 class="heading">スタイル詳細</h3>
 
 
-<div class="row">
-<div class="col-md-3"></div>
-<div class="col-md-4">
-<%= attachment_image_tag @style, :image, format: 'jpeg', size:"300x300" %>
+<div class="row mt-3">
+<div class="col-md-1"></div>
+<div class="col-md-5">
+<%= attachment_image_tag @style, :image, format: 'jpeg', size: "330x440" %>
 </div>
 
 
-<div class="col-md-3 mt-5">
+<div class="col-md-5 mt-5">
 
 <div style="display:block"><h4><%= @style.name %></h4></div>
 
@@ -53,7 +53,7 @@
 
 </div>
 
-<div class="col-md-2"></div>
+<div class="col-md-1"></div>
 
 </div>
 
