--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -9,7 +9,7 @@
 
      <div>
        <%= link_to style_path(style) do %>
-         <%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+         <%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5" %>
        <% end %>
        <p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
        <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
