--- a/app/views/styles/new.html.erb
+++ b/app/views/styles/new.html.erb
@@ -1,20 +1,22 @@
-<h3 class="heading">New Style</h3>
+<h2 class="heading mt-3">New Style</h2>
 
-<div class="container">
-<div class="row">
+
+<div class="row mt-5">
 
 <div class="col-md-1"></div>
 
 
 <div class="col-md-10">
 
-<%= form_with model:@style, url:'/styles', local:true do |f| %>
-
-<h4>画像</h4>
-<%= f.attachment_field :image %>
-
+<%= form_with model:@style, url: '/styles', local:true do |f| %>
 
 <table class="table table-striped">
+<tr>
+<th>画像</th>
+<td><%= f.attachment_field :image, class: "btn" %></td>
+</tr>
+
+
 <tr>
 <th>名前</th>
 <td><%= f.text_field :name %></td>
@@ -27,7 +29,7 @@
 
 </table>
 
-<%= f.submit '保存' %>
+<%= f.submit '保存', class: "btn btn-primary" %>
 
 
 <% end %>
@@ -36,5 +38,4 @@
 
 <div class="col-md-1"></div>
 
-</div>
 </div>
