--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,14 +1,20 @@
 <h3 class="heading">Favorite Styles</h3>
 
+<div class="row mt-3">
+<div class="col-md-1"></div>
   <div class="d-flex flex-wrap justify-content-between col-md-10">
       <% @like_styles.each do |style| %>
 
      <div>
 <%= link_to style_path(style) do %>
-         <%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+         <%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5" %>
        <% end %>
        <p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
        <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
      </div>
        <% end %>
+    </div>
+
+
+    <div class="col-md-1"></div>
     </div>
