--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+
   <div class="row">
 
     <div class="col-md-2"></div>
@@ -65,7 +65,7 @@
 
 <div>
 <%= link_to style_path(style) do %>
-<%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+<%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5" %>
 <% end %>
 </div>
 
@@ -75,4 +75,3 @@
     <div class="col-md-2"></div>
 
   </div>
-</div
