--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,6 +1,6 @@
-<h3 class="heading">Favorite Styles</h3>
+<h2 class="heading mt-3">Favorite Styles</h2>
 
-<div class="row mt-3">
+<div class="row mt-5">
 <div class="col-md-1"></div>
   <div class="d-flex flex-wrap justify-content-between col-md-10">
       <% @like_styles.each do |style| %>
