--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,8 @@
-<h3 class="heading">Closet</h3>
+<h2 class="heading mt-3">My Closet</h2>
 
 
 
-<div class="row">
+<div class="row mt-5">
 
 <div class="col-md-1"></div>
 
