--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,14 +1,14 @@
-<div class="container">
-    <h3 class="heading">アイテム詳細</h3>
 
-    <div class="row">
-        <div class="col-md-3"></div>
+    <h2 class="heading mt-3">アイテム詳細</h2>
 
-        <div class="col-md-3">
+    <div class="row mt-5">
+        <div class="col-md-1"></div>
+
+        <div class="col-md-5">
             <%= attachment_image_tag @item, :image, format: 'png', size: "300x300" %>
         </div>
 
-        <div class="col-md-3 mt-5 text-center">
+        <div class="col-md-5 mt-5 text-center">
             <div style="display:block"><h4><%= @item.name %></h4></div>
             <div style="display:block"><h5><%= @item.detail %></h5></div>
 
@@ -18,6 +18,5 @@
             </div>
         </div>
 
-        <div class="col-md-3"></div>
+        <div class="col-md-1"></div>
     </div>
-</div>
