--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,12 @@
 <div class="title col-md-10 mt-2"><%= link_to "Closet", root_path, class: "logo" %></div>
 <div class="col-md-2">
  <% if user_signed_in? %>
+<%= select_tag 'range', options_for_select([['---選択してください---', ''], ['Item', '1'],['Style','2']])  %>
+<%= select_tag 'search', options_for_select([["前方一致", "forward_match"], ["後方一致", "backward_match"],["完全一致","perfect_match"],["部分一致","partial_match"]])  %>
+<%= text_field_tag (:word) %>
+<%= submit_tag "検索" %>
+
+
 
         <nav class="navbar navbar-light  justify-content-end mt-3">
 
@@ -33,11 +39,15 @@
              <nav class="navbar navbar-light  justify-content-end">
              <ul class="navbar-nav">
                  <div class="row mt-3">
-              <li  class="nav-item col-md-6 pr-5">
+              <li  class="nav-item col-md-4">
                 <%= link_to "About", about_path, class: "menu far fa-lightbulb" %>
               </li>
 
-               <li  class="nav-item  col-md-6 pl-5">
+               <li  class="nav-item col-md-4">
+              <%= link_to "ログイン", new_user_session_path, class: "menu fas fa-sign-out-alt" %>
+               </li>
+
+               <li  class="nav-item  col-md-4">
                  <%= link_to "SignUp", new_user_registration_path, class: "menu fas fa-user-plus" %>
                </li>
 
