--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,7 +1,6 @@
-<h3 class="heading">Styles</h3>
+<h2 class="heading mt-3">Styles</h2>
 
-<div class="container">
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-md-1"></div>
 
     <div class="d-flex flex-wrap justify-content-between col-md-10">
@@ -15,8 +14,8 @@
        <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
      </div>
        <% end %>
+       <%= paginate @all_ranks %>
     </div>
 
     <div class="col-md-1"></div>
   </div>
-</div>
