--- a/app/views/users/alert.html.erb
+++ b/app/views/users/alert.html.erb
@@ -1,7 +1,7 @@
-<div class="alert text-center">
+<div class="alert text-center mt-3">
 
   <h1>本当に退会しますか？</h1>
-  <p>退会すると、会員登録情報や<br>これまでの購入履歴が閲覧できなくなります。<br>退会する場合は、「退会する」をクリックしてください。</p>
+  <p class="mt-3">退会すると、会員登録情報や<br>これまでの購入履歴が閲覧できなくなります。<br>退会する場合は、「退会する」をクリックしてください。</p>
 
   <div class="btn">
     <%= link_to '退会しない', user_path(@user),class: "btn btn-primary" %>
