--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -16,12 +16,12 @@
   </ol>
 
   <div class="carousel-inner">
-    <div class="carousel-item active"><img src="/assets/4771511_s.jpg"  class="d-block w-50"></div>
-    <div class="carousel-item"><img src="/assets/22026459_s.jpg" alt="second slide"  class="d-block w-50"></div>
-    <div class="carousel-item"><img src="/assets/4906649_s.jpg"  class="d-block w-50"></div>
-    <div class="carousel-item"><img src="/assets/4906963_s.jpg"  class="d-block w-50"></div>
-    <div class="carousel-item"><img src="/assets/5085364_s.jpg"  class="d-block w-50"></div>
-    <div class="carousel-item"><img src="/assets/5043422_s.jpg"  class="d-block w-50"></div>
+    <div class="carousel-item active"><img src="/assets/4771511_s.jpg"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/22026459_s.jpg" alt="second slide"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/4906649_s.jpg"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/4906963_s.jpg"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/5085364_s.jpg"  class="d-block"></div>
+    <div class="carousel-item"><img src="/assets/5043422_s.jpg"  class="d-block"></div>
   </div>
 
  <a href="#sample" class="carousel-control-prev" role="buttton" date-slide="prev">
