--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
     </div>
 
     <footer>
-        <p class="text-center">Footer</p>
+        <p class="text-center mt-3">©CLOSET</p>
     </footer>
 
 
